--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,5 +11,6 @@
 @import "3-sections/growth";
 @import "3-sections/meet-us";
 @import "3-sections/staff";
+@import "3-sections/portfolio";
 
 @import "4-layouts/home";
