--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,5 +12,6 @@
 @import "3-sections/meet-us";
 @import "3-sections/staff";
 @import "3-sections/portfolio";
+@import "3-sections/projects-list";
 
 @import "4-layouts/home";
