--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -928,6 +928,14 @@ body {
   .portfolio .lead__text:before, .portfolio .lead__text:after {
     width: 2.5rem; }
 
+.projects__item {
+  width: 33.3333%;
+  height: 33vw;
+  border: 1px solid #fff; }
+  .projects__item--1-1 {
+    background-color: #000;
+    background-image: url("../img/projects/1-1.jpg"); }
+
 /* //────  ──────────────────────────────────────────────────────────────────────────────────
   LEAD */
 .lead {
