--- a/_includes/projects-list.html
+++ b/_includes/projects-list.html
@@ -4,33 +4,36 @@
 <section class="projects container-fluid">
 
   <div class="projects__row row">
-    <div class="projects__item projects__item--1-1">1-1</div>
-    <div class="projects__item projects__item--1-2">1-2</div>
-    <div class="projects__item projects__item--1-3">1-3</div>
-    <div class="projects__item projects__item--1-4">1-4</div>
-    <div class="projects__item projects__item--1-5">1-5</div>
-    <div class="projects__item projects__item--1-6">1-6</div>
-  </div>
+    <a class="projects__item projects__item--1-1" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--1-2" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--1-3" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--1-4" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--1-5" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--1-6" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--1-7" href="#" target="_blank"></a>
+  </div><!-- .projects__row -->
   <div class="projects__row row">
-    <div class="projects__item projects__item--2-1">2-1</div>
-    <div class="projects__item projects__item--2-2">2-2</div>
-    <div class="projects__item projects__item--2-3">2-3</div>
-    <div class="projects__item projects__item--2-4">2-4</div>
-    <div class="projects__item projects__item--2-5">2-5</div>
-    <div class="projects__item projects__item--2-6">2-6</div>
-  </div>
+    <a class="projects__item projects__item--2-1" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--2-2" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--2-3" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--2-4" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--2-5" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--2-6" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--2-7" href="#" target="_blank"></a>
+  </div><!-- .projects__row -->
   <div class="projects__row row">
-    <div class="projects__item projects__item--3-1">3-1</div>
-    <div class="projects__item projects__item--3-2">3-2</div>
-    <div class="projects__item projects__item--3-3">3-3</div>
-    <div class="projects__item projects__item--3-4">3-4</div>
-    <div class="projects__item projects__item--3-5">3-5</div>
-    <div class="projects__item projects__item--3-6">3-6</div>
-  </div>
+    <a class="projects__item projects__item--3-1" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--3-2" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--3-3" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--3-4" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--3-5" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--3-6" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--3-7" href="#" target="_blank"></a>
+  </div><!-- .projects__row -->
   <div class="projects__row row">
-    <div class="projects__item projects__item--1-6">4-1</div>
-    <div class="projects__item projects__item--2-6">4-2</div>
-    <div class="projects__item projects__item--3-6">4-3</div>
-  </div>
+    <a class="projects__item projects__item--1-7" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--2-7" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--3-7" href="#" target="_blank"></a>
+  </div><!-- .projects__row -->
 
 </section>
