--- a/assets/css/3-sections/_projects-list.sass
+++ b/assets/css/3-sections/_projects-list.sass
@@ -1,10 +1,103 @@
+/* Base */
 .projects__item
   width: 33.3333%
   height: 33vw
-  border: 1px solid #fff
-
-
-  &--1-1
-    background: 
+  filter: grayscale(1) opacity(.5)
+  transition: all .3s ease-in-out
+  background: 
       color: #000
-      image: url('../img/projects/1-1.jpg')
+      size: cover
+      position: 50% 50%
+      repeat: no-repeat
+
+  &:hover
+    filter: grayscale(0) opacity(1)
+
+  /* Modificators */
+  &--1-1
+    background-image: url('../img/projects/1-1.jpg')
+  &--1-2
+    background-image: url('../img/projects/1-2.jpg')
+  &--1-3
+    background-image: url('../img/projects/1-3.jpg')
+  &--1-4
+    background-image: url('../img/projects/1-4.jpg')
+  &--1-5
+    background-image: url('../img/projects/1-5.jpg')
+  &--1-6
+    background-image: url('../img/projects/1-6.jpg')
+  &--1-7
+    background-image: url('../img/projects/1-7.jpg')
+
+  &--2-1
+    background-image: url('../img/projects/2-1.jpg')
+  &--2-2
+    background-image: url('../img/projects/2-2.jpg')
+  &--2-3
+    background-image: url('../img/projects/2-3.jpg')
+  &--2-4
+    background-image: url('../img/projects/2-4.jpg')
+  &--2-5
+    background-image: url('../img/projects/2-5.jpg')
+  &--2-6
+    background-image: url('../img/projects/2-6.jpg')
+  &--2-7
+    background-image: url('../img/projects/2-7.jpg')
+
+  &--3-1
+    background-image: url('../img/projects/3-1.jpg')
+  &--3-2
+    background-image: url('../img/projects/3-2.jpg')
+  &--3-3
+    background-image: url('../img/projects/3-3.jpg')
+  &--3-4
+    background-image: url('../img/projects/3-4.jpg')
+  &--3-5
+    background-image: url('../img/projects/3-5.jpg')
+  &--3-6
+    background-image: url('../img/projects/3-6.jpg')
+  &--3-7
+    background-image: url('../img/projects/3-7.jpg')
+
+  &:nth-child(n+4)
+    display: none
+
+//──── /* Display changes */ ─────────────────────────────────────────────────────────────
+// 480 - base on single item max width = 160px
+@media (min-width: 30em)
+  .projects__row:last-child
+    display: none
+
+  .projects__item
+    width: 25%
+    height: 25vw
+
+    &:nth-child(4)
+      display: block
+
+// 640 - base on single item max width = 160px
+@media (min-width: 40em)
+  .projects__item
+    width: 20%
+    height: 20vw
+
+    &:nth-child(5)
+      display: block
+  
+// 800 - base on single item max width = 160px
+@media (min-width: 50em)
+  .projects__item
+    width: 16.6666666667%
+    height: 16.6666666667vw
+
+    &:nth-child(6)
+      display: block
+
+// 960 - base on single item max width = 160px
+@media (min-width: 60em)
+  .projects__item
+    width: 14.2857142857%
+    height: 14.2857142857vw
+
+    &:nth-child(7)
+      display: block
