--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -928,13 +928,95 @@ body {
   .portfolio .lead__text:before, .portfolio .lead__text:after {
     width: 2.5rem; }
 
+/* Base */
 .projects__item {
   width: 33.3333%;
   height: 33vw;
-  border: 1px solid #fff; }
+  -webkit-filter: grayscale(1) opacity(0.5);
+          filter: grayscale(1) opacity(0.5);
+  transition: all .3s ease-in-out;
+  background-color: #000;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  /* Modificators */ }
+  .projects__item:hover {
+    -webkit-filter: grayscale(0) opacity(1);
+            filter: grayscale(0) opacity(1); }
   .projects__item--1-1 {
-    background-color: #000;
     background-image: url("../img/projects/1-1.jpg"); }
+  .projects__item--1-2 {
+    background-image: url("../img/projects/1-2.jpg"); }
+  .projects__item--1-3 {
+    background-image: url("../img/projects/1-3.jpg"); }
+  .projects__item--1-4 {
+    background-image: url("../img/projects/1-4.jpg"); }
+  .projects__item--1-5 {
+    background-image: url("../img/projects/1-5.jpg"); }
+  .projects__item--1-6 {
+    background-image: url("../img/projects/1-6.jpg"); }
+  .projects__item--1-7 {
+    background-image: url("../img/projects/1-7.jpg"); }
+  .projects__item--2-1 {
+    background-image: url("../img/projects/2-1.jpg"); }
+  .projects__item--2-2 {
+    background-image: url("../img/projects/2-2.jpg"); }
+  .projects__item--2-3 {
+    background-image: url("../img/projects/2-3.jpg"); }
+  .projects__item--2-4 {
+    background-image: url("../img/projects/2-4.jpg"); }
+  .projects__item--2-5 {
+    background-image: url("../img/projects/2-5.jpg"); }
+  .projects__item--2-6 {
+    background-image: url("../img/projects/2-6.jpg"); }
+  .projects__item--2-7 {
+    background-image: url("../img/projects/2-7.jpg"); }
+  .projects__item--3-1 {
+    background-image: url("../img/projects/3-1.jpg"); }
+  .projects__item--3-2 {
+    background-image: url("../img/projects/3-2.jpg"); }
+  .projects__item--3-3 {
+    background-image: url("../img/projects/3-3.jpg"); }
+  .projects__item--3-4 {
+    background-image: url("../img/projects/3-4.jpg"); }
+  .projects__item--3-5 {
+    background-image: url("../img/projects/3-5.jpg"); }
+  .projects__item--3-6 {
+    background-image: url("../img/projects/3-6.jpg"); }
+  .projects__item--3-7 {
+    background-image: url("../img/projects/3-7.jpg"); }
+  .projects__item:nth-child(n+4) {
+    display: none; }
+
+@media (min-width: 30em) {
+  .projects__row:last-child {
+    display: none; }
+  .projects__item {
+    width: 25%;
+    height: 25vw; }
+    .projects__item:nth-child(4) {
+      display: block; } }
+
+@media (min-width: 40em) {
+  .projects__item {
+    width: 20%;
+    height: 20vw; }
+    .projects__item:nth-child(5) {
+      display: block; } }
+
+@media (min-width: 50em) {
+  .projects__item {
+    width: 16.6666666667%;
+    height: 16.6666666667vw; }
+    .projects__item:nth-child(6) {
+      display: block; } }
+
+@media (min-width: 60em) {
+  .projects__item {
+    width: 14.2857142857%;
+    height: 14.2857142857vw; }
+    .projects__item:nth-child(7) {
+      display: block; } }
 
 /* //────  ──────────────────────────────────────────────────────────────────────────────────
   LEAD */
