--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -934,15 +934,37 @@ body {
   height: 33vw;
   -webkit-filter: grayscale(1) opacity(0.5);
           filter: grayscale(1) opacity(0.5);
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  overflow: hidden;
   transition: all .3s ease-in-out;
   background-color: #000;
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
   /* Modificators */ }
-  .projects__item:hover {
-    -webkit-filter: grayscale(0) opacity(1);
-            filter: grayscale(0) opacity(1); }
+  .projects__item:after {
+    content: '- our new project! -';
+    color: #000;
+    height: 60%;
+    line-height: 8;
+    opacity: 0;
+    transition: all .3s ease-in-out;
+    background-image: url("../img/project_eye.svg");
+    background-size: 40px 50px;
+    background-position: 50% 20%;
+    background-repeat: no-repeat; }
+  @media (hover: hover) {
+    .projects__item:hover {
+      -webkit-filter: grayscale(0) opacity(1);
+              filter: grayscale(0) opacity(1);
+      text-decoration: none; }
+      .projects__item:hover:after {
+        opacity: 1; } }
   .projects__item--1-1 {
     background-image: url("../img/projects/1-1.jpg"); }
   .projects__item--1-2 {
@@ -995,28 +1017,32 @@ body {
     width: 25%;
     height: 25vw; }
     .projects__item:nth-child(4) {
-      display: block; } }
+      display: -ms-flexbox;
+      display: flex; } }
 
 @media (min-width: 40em) {
   .projects__item {
     width: 20%;
     height: 20vw; }
     .projects__item:nth-child(5) {
-      display: block; } }
+      display: -ms-flexbox;
+      display: flex; } }
 
 @media (min-width: 50em) {
   .projects__item {
     width: 16.6666666667%;
     height: 16.6666666667vw; }
     .projects__item:nth-child(6) {
-      display: block; } }
+      display: -ms-flexbox;
+      display: flex; } }
 
 @media (min-width: 60em) {
   .projects__item {
     width: 14.2857142857%;
     height: 14.2857142857vw; }
     .projects__item:nth-child(7) {
-      display: block; } }
+      display: -ms-flexbox;
+      display: flex; } }
 
 /* //────  ──────────────────────────────────────────────────────────────────────────────────
   LEAD */
