Add an empty Brands section

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,5 +13,6 @@
 @import "3-sections/staff";
 @import "3-sections/portfolio";
 @import "3-sections/projects-list";
+@import "3-sections/brands";
 
 @import "4-layouts/home";
