--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,5 +14,6 @@
 @import "3-sections/portfolio";
 @import "3-sections/projects-list";
 @import "3-sections/brands";
+@import "3-sections/logos";
 
 @import "4-layouts/home";
