Finish the Logos section
By adding borders to the .logos__item

--- a/assets/css/1-base/_vars.sass
+++ b/assets/css/1-base/_vars.sass
@@ -15,3 +15,6 @@ $member-underline: #f34739
 // Shapes
 $member-border-transparent: 3rem solid transparent
 $member-border-triangle: 4rem solid $bg-color
+
+// Borders
+$logos-border: 1px solid rgba(0,0,0,.05)
