--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1056,6 +1056,16 @@ body {
   .brands .lead__text:before, .brands .lead__text:after {
     width: 2.9rem; }
 
+.logos {
+  padding-top: 4rem;
+  padding-bottom: 4rem; }
+
+.logos__row:first-child .logos__item {
+  border-top: none; }
+
+.logos__row:last-child .logos__item {
+  border-bottom: none; }
+
 /* Base */
 .logos__item {
   position: relative;
@@ -1069,7 +1079,6 @@ body {
       justify-content: center;
   -ms-flex-align: center;
       align-items: center;
-  overflow: hidden;
   transition: all .3s ease-in-out;
   border: 1px solid rgba(0, 0, 0, 0.05); }
   @media (hover: hover) {
@@ -1077,6 +1086,8 @@ body {
       -webkit-filter: grayscale(0) opacity(1);
               filter: grayscale(0) opacity(1);
       text-decoration: none; } }
+  .logos__item:first-child {
+    border-left: none; }
   .logos__item:nth-child(n+4) {
     display: none; }
 
@@ -1092,31 +1103,41 @@ body {
     padding-bottom: 25%; }
     .logos__item:nth-child(4) {
       display: -ms-flexbox;
-      display: flex; } }
+      display: flex;
+      border-right: none; } }
 
 @media (min-width: 40em) {
   .logos__item {
     width: 20%;
     padding-bottom: 20%; }
+    .logos__item:nth-child(4) {
+      border-right: 1px solid rgba(0, 0, 0, 0.05); }
     .logos__item:nth-child(5) {
       display: -ms-flexbox;
-      display: flex; } }
+      display: flex;
+      border-right: none; } }
 
 @media (min-width: 50em) {
   .logos__item {
     width: 16.6666666667%;
     padding-bottom: 16.6666666667%; }
+    .logos__item:nth-child(5) {
+      border-right: 1px solid rgba(0, 0, 0, 0.05); }
     .logos__item:nth-child(6) {
       display: -ms-flexbox;
-      display: flex; } }
+      display: flex;
+      border-right: none; } }
 
 @media (min-width: 60em) {
   .logos__item {
     width: 14.2857142857%;
     padding-bottom: 14.2857142857%; }
+    .logos__item:nth-child(6) {
+      border-right: 1px solid rgba(0, 0, 0, 0.05); }
     .logos__item:nth-child(7) {
       display: -ms-flexbox;
-      display: flex; } }
+      display: flex;
+      border-right: none; } }
 
 .brands-nike, .brands-amd, .brands-ea, .brands-intel, .brands-17,
 .brands-19, .brands-avg, .brands-android, .brands-cooler-master, .brands-dell,
