Add an empty Footer section

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,5 +15,6 @@
 @import "3-sections/projects-list";
 @import "3-sections/brands";
 @import "3-sections/logos";
+@import "3-sections/footer";
 
 @import "4-layouts/home";
