--- a/assets/css/1-base/_vars.sass
+++ b/assets/css/1-base/_vars.sass
@@ -11,6 +11,7 @@ $indicator1: #f34739
 $indicator2: #009989
 $indicator3: #152b3c
 $member-underline: #f34739
+$footer-underline: #009989
 
 // Shapes
 $member-border-transparent: 3rem solid transparent
