--- a/assets/css/3-sections/_hero.sass
+++ b/assets/css/3-sections/_hero.sass
@@ -1,14 +1,83 @@
 .hero
-  background:
-    color: #090909
-    image: url("../img/bg_hero.jpg")
-    size: cover
-    position: 50% 50%
-    repeat: no-repeat
   display: flex
   flex-direction: column
   justify-content: center
   align-items: center
+  background:
+    color: #090909
+    image: url("../img/bgs/hero/375x460.jpg")
+    size: cover
+    position: 50% 50%
+    repeat: no-repeat
+    
+  /* Media Queries for the responsive background */
+  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)
+    background:
+      image: url("../img/bgs/hero/375x460@2x.jpg")
+
+  // 376px
+  @media (min-width: 23.5em)
+    background:
+      image: url("../img/bgs/hero/576x400.jpg")
+
+  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) and (min-width: 23.5em)
+    background:
+      image: url("../img/bgs/hero/576x400@2x.jpg")
+
+  // 576px
+  @media (min-width: 36em)
+    background:
+      image: url("../img/bgs/hero/768x400.jpg")
+
+  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) and (min-width: 36em)
+    background:
+      image: url("../img/bgs/hero/768x400@2x.jpg")
+
+  // 768px
+  @media (min-width: 48em)
+    background:
+      image: url("../img/bgs/hero/816x400.jpg")
+
+  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) and (min-width: 48em)
+    background:
+      image: url("../img/bgs/hero/816x400@2x.jpg")
+
+  // 816px
+  @media (min-width: 51em)
+    background:
+      image: url("../img/bgs/hero/992x620.jpg")
+
+  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) and (min-width: 51em)
+    background:
+      image: url("../img/bgs/hero/992x620@2x.jpg")
+
+  // 992px
+  @media (min-width: 62em)
+    background:
+      image: url("../img/bgs/hero/1200x620.jpg")
+
+  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) and (min-width: 62em)
+    background:
+      image: url("../img/bgs/hero/1200x620@2x.jpg")
+
+  // 1200px
+  @media (min-width: 75em)
+    background:
+      image: url("../img/bgs/hero/1600x620.jpg")
+
+  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) and (min-width: 75em)
+    background:
+      image: url("../img/bgs/hero/1600x620@2x.jpg")
+
+  // 1600px
+  @media (min-width: 100em)
+    background:
+      image: url("../img/bgs/hero/maxx620.jpg")
+
+  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) and (min-width: 100em)
+    background:
+      image: url("../img/bgs/hero/maxx620@2x.jpg")
+  /* END of Media Queries for the responsive background */
 
   &__btn
     font-size: 1.4rem
