--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,6 +5,7 @@
 @import "1-base/vars";
 @import "1-base/base";
 @import "1-base/helper-classes";
+@import "1-base/mixins";
 
 @import "3-sections/header";
 @import "3-sections/hero";
